fix: events leaking