@@ -24,7 +24,7 @@ repositories {
 tasks {
     runServer {
         minecraftVersion("1.21.11")
-        jvmArgs("-Dcom.mojang.eula.agree=true", "-Dfile.encoding=UTF-8")
+        jvmArgs("-Dcom.mojang.eula.agree=true", "-Dfile.encoding=UTF-8", "--add-modules=jdk.incubator.vector")
         downloadPlugins {
             //github("retrooper", "packetevents", "v2.11.1", "packetevents-spigot-2.11.1.jar")
             hangar("PlaceholderAPI", "2.11.6")
